--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "sass": "^1.57.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
